<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9575CD"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="270sp"
            android:src="@drawable/firebase" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120sp"
            android:gravity="center"
            android:text="@string/entarence"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_alignParentBottom="true"
        android:background="#9475CC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:gravity="center"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:gravity="center"
                android:hint="@string/password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSignedIn"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/reg"
                android:textColor="#FEFEFE"
                android:textColorHint="#FEFEFE"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/newacc"
                android:textColorHint="#FEFEFE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVerifyEmail"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/verification"
                android:textColorHint="#FEFEFE" />

            <Button
                android:id="@+id/btsignOut"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:backgroundTint="@color/purple_500"
                android:hint="@string/signout"
                android:textColorHint="#FEFEFE" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
